5.14.0
NEW
    - Make stancebar movable and let you choose the grow direction
    - Added option to override addon conflict behaivor

FIXES
    - Fix taint issue in pet battle

5.13.4
FIXES
    - Fix interaction with Dominos
    - Totem fram is now shown with player frame in target frame style

5.13.3
FIXES
    - Raid styled party frames now working as intended

5.13.2
FIXES
    - Partyframes: Debuff stacks > 9 are now display correctly 

MISC
    - Partyframes: Make buff line margin smaller to show more buffs
    - Added players raid group into player tooltip
    - Make Raid Control secure: Added Worldmakers into that menu
    - Added option to set max shown lines on copy chat frame
    - Added 'Main Tank', 'Main Assist', 'Group Leader' and 'Group Assist' info to raid unit tooltips
    - Some options are now deactivated if conflicting addons are loaded. In the settings you can see which Addons is causing the deactivation.

5.13.1
FIXES
    - Fix an error that raid buffs not disapearing
    - Fix an error with conduits datatext if you havent a soulbind
    - Raise PetBattleFrame so auras are not overlapping them anymore

5.13.0
NEW
    - Added option for important debuffs to target and focus frame

FIXES
    - Fix some lua errors

MISC
    - Code clean up

5.12.1
FIXES
    - Fix target/focus mask overlapping
    - Fix Great Vault micro menu button interaction with dominos

MISC
    - Update locals
    - Code clean up

5.12.0
NEW
    - Added "Great Vault" Button to micromenu
    - Added datatext to gametime (hover the time on minimap)
    - Added datatext to talent micro button

FIXES
    - Fix rare ember court and chatframe lua error
    - Fix some target/foucs overlapping

MISC
    - Remove auto sell junk chat output: Blizzard os doing this now
    - Right click guild micromenu button to invite or whisper guild mebers

5.11.2
FIXES
    - Fix some gossip skin issues
    - Some reputation issues

MISC
    - Update toc

5.11.1
FIXES